<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Home"
        android:icon="@drawable/ic_home_24"
        android:id="@+id/homeFragment"/>

    <item
        android:title="Maps"
        android:icon="@drawable/ic_baseline_map_24"
        android:id="@+id/mapsFragment"/>

    <item
        android:title="Search"
        android:icon="@drawable/ic_search_24"
        android:id="@+id/listItemFragment"/>
<!--    <item-->
<!--        android:title="Notifications"-->
<!--        android:icon="@drawable/ic_notifications_24"-->
<!--        android:id="@+id/notificationsFragment"/>-->
    <item
        android:icon="@drawable/ic_person_24"
        android:title="Profile"
        android:id="@+id/profileFragment"/>
</menu>